# fmtbuf

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/workflows/: unit-test.yml
examples/: writebuf.rs
src/: lib.rs  utf8.rs
