[package]
name = "fmtbuf"
version = "0.1.1"
edition = "2021"
authors = ["Travis Gockel <travis@gockelhut.com>"]
license = "Apache-2.0"
description = "Utilities for formatting to a fixed-size buffer"
keywords = ["string", "format"]
categories = ["development-tools::ffi", "no-std"]
readme = "README.md"
repository = "https://github.com/tgockel/fmtbuf"

[features]
default = ["std"]
std = []

[dependencies]

[badges]
maintenance = { status = "actively-developed" }
