[package]
name = "fmtbuf"
version = "0.1.2"
edition = "2018"
rust-version = "1.31"
authors = ["Travis Gockel <travis@gockelhut.com>"]
license = "Apache-2.0"
description = "Utilities for formatting to a fixed-size buffer"
keywords = ["string", "format"]
categories = ["development-tools::ffi", "no-std"]
readme = "README.md"
repository = "https://github.com/tgockel/fmtbuf"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
clap = { version = "4.0.0", features = ["derive"] }

[badges]
maintenance = { status = "actively-developed" }
